// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <span />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tooltip should hide when mouse leave antd disabled component Button 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-tooltip-disabled-compatible-wrapper"
    style="display: inline-block; cursor: not-allowed;"
  >
    <button
      class="dcloud-btn"
      disabled=""
      style="pointer-events: none;"
      type="button"
    />
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tooltip should hide when mouse leave antd disabled component Checkbox 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-tooltip-disabled-compatible-wrapper"
    style="display: inline-block; cursor: not-allowed;"
  >
    <label
      class="dcloud-checkbox-wrapper dcloud-checkbox-wrapper-disabled"
      style="pointer-events: none;"
    >
      <span
        class="dcloud-checkbox dcloud-checkbox-disabled"
      >
        <input
          class="dcloud-checkbox-input"
          disabled=""
          type="checkbox"
          value=""
        />
        <span
          class="dcloud-checkbox-inner"
        />
      </span>
    </label>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Tooltip should hide when mouse leave antd disabled component Switch 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-tooltip-disabled-compatible-wrapper"
    style="display: inline-block; cursor: not-allowed;"
  >
    <button
      aria-checked="false"
      class="dcloud-switch dcloud-switch-disabled"
      disabled=""
      role="switch"
      style="pointer-events: none;"
      type="button"
    >
      <div
        class="dcloud-switch-handle"
      />
      <span
        class="dcloud-switch-inner"
      />
    </button>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
